--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "devDependencies": {
     "@cloudflare/workers-types": "^3.10.0",
+    "miniflare": "^2.4.0",
     "superstruct": "^0.15.4",
     "typescript": "^4.6.4",
     "wrangler": "2.0.2"
